Add some little apps

--- a/index.html
+++ b/index.html
@@ -340,6 +340,12 @@
         <ul class="grid-half">
           <li class="stack project shiny">
             <h3>
+              <a href="/cluckulator" title="Try it out"> Cluclulator </a>
+            </h3>
+            <p>A novel calculator. Spin the chicken like a rotary phone to select numbers.</p>
+          </li>
+          <li class="stack project shiny">
+            <h3>
               <a href="https://github.com/seanockert/patient-wait-dashboard" title="View on Github">
                 Patient Wait Dashboard
               </a>
@@ -366,6 +372,12 @@
           </li>
           <li class="stack project shiny">
             <h3>
+              <a href="/flashcards" title="Try it out">Flashcards</a>
+            </h3>
+            <p>Create decks of flash cards.</p>
+          </li>
+          <li class="stack project shiny">
+            <h3>
               <a href="/css-layouts" title="View on Github">CSS Layouts</a>
             </h3>
             <p>Who needs a grid system any more? Some useful CSS layouts to drop into any project.</p>
@@ -388,7 +400,12 @@
               Made with PetiteVue.
             </p>
           </li>
-
+          <li class="stack project shiny">
+            <h3>
+              <a href="/sequence" title="Play it">Sequence game</a>
+            </h3>
+            <p>Tap the numbers in sequence. How high can you go?</p>
+          </li>
           <li class="stack project shiny">
             <h3>
               <a href="/email-content-generator" title="View Neto Email Content Generator project"
@@ -402,7 +419,7 @@
             <h3>
               <a href="/unique-avatar-colors" title="Try it">Unique Avatar Colours</a>
             </h3>
-            <p>Genetate avatars from unique IDs</p>
+            <p>Generate avatars from unique IDs</p>
           </li>
         </ul>
       </section>
