Add some little apps

--- a/flashcards/index.html
+++ b/flashcards/index.html
@@ -38,7 +38,7 @@
 
         <div class="controls">
           <div>
-            <button
+            <!-- <button
               @click="rate(activeCardId, 'easy')"
               title="Easy"
               class="squircle positive"
@@ -71,7 +71,7 @@
                   <path d="M16 16s-1.5-2-4-2-4 2-4 2M9 9h.01M15 9h.01" />
                 </svg>
               </div>
-            </button>
+            </button> -->
           </div>
 
           <div>
