--- a/index.html
+++ b/index.html
@@ -340,9 +340,18 @@
         <ul class="grid-half">
           <li class="stack project shiny">
             <h3>
-              <a href="/cluckulator" title="Try it out"> Cluclulator </a>
+              <a href="/cluckulator" title="Try it out">Cluckulator </a>
             </h3>
             <p>A novel calculator. Spin the chicken like a rotary phone to select numbers.</p>
+          </li>
+          <li class="stack project shiny">
+            <h3>
+              <a href="/secret-santa" title="Try it out">Secret Santa Matcher</a>
+            </h3>
+            <p>
+              Generate random matches for a game of Secret Santa. Works without a DB or complex backend. Each
+              participant gets an encoded URL to reveal their match.
+            </p>
           </li>
           <li class="stack project shiny">
             <h3>
@@ -353,15 +362,6 @@
             <p>
               To display in a hospital Emergency Department. Uses a websocket server to sync patients waiting and
               estimate the wait time across multiple devices.
-            </p>
-          </li>
-          <li class="stack project shiny">
-            <h3>
-              <a href="/secret-santa" title="Try it out">Secret Santa Matcher</a>
-            </h3>
-            <p>
-              Generate random matches for a game of Secret Santa. Works without a DB or complex backend. Each
-              participant gets an encoded URL to reveal their match.
             </p>
           </li>
           <li class="stack project shiny">
