--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
         </div>
       </section>
       <section>
-        <h2>Need a web professional?<br /><a href="mailto:hello@seanockert.com" title="Email me">Get in touch!</a></h2>
+        <h2>Need a web professional?<br /><a href="mailto:seanockert@gmail.com" title="Email me">Get in touch!</a></h2>
       </section>
       <section class="section contact">
         <ul class="grid-third">
